crates/djls-semantic/src/filters/snapshots/djls_semantic__filters__validation__tests__empty_arity_specs_no_diagnostics.snap
---
source: crates/djls-semantic/src/filters/validation.rs
expression: rendered
---
Source
test.html
   1 | {{ value|title:"bad" }}

Diagnostics (0)
