crates/djls-semantic/src/filters/snapshots/djls_semantic__filters__validation__tests__filter_chain_validates_each.snap
---
source: crates/djls-semantic/src/filters/validation.rs
expression: rendered
---
Source
test.html
   1 | {{ value|title:"bad"|truncatewords }}

Diagnostics (2)
1. FilterUnexpectedArgument: Filter 'title' does not accept an argument
    --> test.html:1:10
   1 | {{ value|title:"bad"|truncatewords }}
     |          ^^^^^^^^^^^

2. FilterMissingArgument: Filter 'truncatewords' requires an argument
    --> test.html:1:22
   1 | {{ value|title:"bad"|truncatewords }}
     |                      ^^^^^^^^^^^^^
