crates/djls-semantic/src/filters/snapshots/djls_semantic__filters__validation__tests__filter_missing_required_arg_s115.snap
---
source: crates/djls-semantic/src/filters/validation.rs
expression: rendered
---
Source
test.html
   1 | {{ value|truncatewords }}

Diagnostics (1)
1. FilterMissingArgument: Filter 'truncatewords' requires an argument
    --> test.html:1:10
   1 | {{ value|truncatewords }}
     |          ^^^^^^^^^^^^^
