crates/djls-semantic/src/filters/snapshots/djls_semantic__filters__validation__tests__filter_unexpected_arg_s116.snap
---
source: crates/djls-semantic/src/filters/validation.rs
expression: rendered
---
Source
test.html
   1 | {{ value|title:"arg" }}

Diagnostics (1)
1. FilterUnexpectedArgument: Filter 'title' does not accept an argument
    --> test.html:1:10
   1 | {{ value|title:"arg" }}
     |          ^^^^^^^^^^^
