crates/djls-semantic/src/filters/snapshots/djls_semantic__filters__validation__tests__filter_with_required_arg_no_error.snap
---
source: crates/djls-semantic/src/filters/validation.rs
expression: rendered
---
Source
test.html
   1 | {{ value|truncatewords:30 }}

Diagnostics (0)
