crates/djls-semantic/src/filters/snapshots/djls_semantic__filters__validation__tests__inspector_unavailable_no_arity_diagnostics.snap
---
source: crates/djls-semantic/src/filters/validation.rs
expression: rendered
---
Source
test.html
   1 | {{ value|truncatewords }}

Diagnostics (0)
