crates/djls-semantic/src/filters/snapshots/djls_semantic__filters__validation__tests__opaque_region_skipped.snap
---
source: crates/djls-semantic/src/filters/validation.rs
expression: rendered
---
Source
test.html
   1 | {% verbatim %}{{ value|truncatewords }}{% endverbatim %}

Diagnostics (0)
