crates/djls-semantic/src/filters/snapshots/djls_semantic__filters__validation__tests__optional_arg_both_ways_no_error.snap
---
source: crates/djls-semantic/src/filters/validation.rs
expression: rendered
---
Source
test.html
   1 | {{ value|date }}{{ value|date:"Y-m-d" }}

Diagnostics (0)
