crates/djls-semantic/src/filters/snapshots/djls_semantic__filters__validation__tests__unknown_filter_no_arity_error.snap
---
source: crates/djls-semantic/src/filters/validation.rs
expression: rendered
---
Source
test.html
   1 | {{ value|unknown_filter }}

Diagnostics (0)
